Getting the app to build and run. Crushing on runtime need to fix view and crash